--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-  "name": "challenge_monitor",
-  "version": "0.0.1",
-  "private": true,
-  "description": "FBP Challenge Monitor",
-  "keywords": [
-    "ui5",
-    "openui5",
-    "sapui5"
-  ],
-  "main": "webapp/index.html",
-  "devDependencies": {
-    "@sap-ux/ui5-middleware-fe-mockserver": "2",
-    "@sap/ux-ui5-tooling": "1",
-    "@ui5/cli": "^3.11.0"
-  },
-  "scripts": {
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore",
-    "start": "fiori run --open \"test/flpSandbox.html?sap-client=100&sap-ui-xx-viewCache=false#brcomchallengemonitorchallengemonitor-display\"",
-    "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandbox.html?sap-client=100&sap-ui-xx-viewCache=false#brcomchallengemonitorchallengemonitor-display\"",
-    "build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
-    "deploy": "fiori verify",
-    "deploy-config": "fiori add deploy-config",
-    "start-noflp": "fiori run --open \"index.html?sap-client=100&sap-ui-xx-viewCache=false\"",
-    "start-mock": "fiori run --config ./ui5-mock.yaml --open \"test/flpSandbox.html?sap-client=100&sap-ui-xx-viewCache=false#brcomchallengemonitorchallengemonitor-display\"",
-    "start-variants-management": "fiori run --open \"preview.html?&sap-client=100&sap-ui-xx-viewCache=false&fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true#preview-app\"",
-    "unit-tests": "fiori run --config ./ui5-mock.yaml --open 'test/unit/unitTests.qunit.html'",
-    "int-tests": "fiori run --config ./ui5-mock.yaml --open 'test/integration/opaTests.qunit.html'"
-  },
-  "sapuxLayer": "CUSTOMER_BASE"
+    "name": "challenge_monitor",
+    "version": "0.0.1",
+    "private": true,
+    "description": "FBP Challenge Monitor",
+    "keywords": [
+        "ui5",
+        "openui5",
+        "sapui5"
+    ],
+    "main": "webapp/index.html",
+    "devDependencies": {
+        "@sap-ux/ui5-middleware-fe-mockserver": "^2.2.51",
+        "@sap/ux-ui5-tooling": "^1.14.1",
+        "@ui5/cli": "^3.11.0",
+        "rimraf": "^3.0.2",
+        "ui5-task-flatten-library": "0.2.5"
+    },
+    "scripts": {
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore",
+        "start": "fiori run --open \"test/flpSandbox.html?sap-client=100&sap-ui-xx-viewCache=false#brcomchallengemonitorchallengemonitor-display\"",
+        "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandbox.html?sap-client=100&sap-ui-xx-viewCache=false#brcomchallengemonitorchallengemonitor-display\"",
+        "build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
+        "deploy": "npm run build && fiori deploy --config ui5-deploy.yaml && rimraf archive.zip",
+        "deploy-config": "fiori add deploy-config",
+        "start-noflp": "fiori run --open \"index.html?sap-client=100&sap-ui-xx-viewCache=false\"",
+        "start-mock": "fiori run --config ./ui5-mock.yaml --open \"test/flpSandbox.html?sap-client=100&sap-ui-xx-viewCache=false#brcomchallengemonitorchallengemonitor-display\"",
+        "start-variants-management": "fiori run --open \"preview.html?&sap-client=100&sap-ui-xx-viewCache=false&fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true#preview-app\"",
+        "unit-tests": "fiori run --config ./ui5-mock.yaml --open 'test/unit/unitTests.qunit.html'",
+        "int-tests": "fiori run --config ./ui5-mock.yaml --open 'test/integration/opaTests.qunit.html'",
+        "undeploy": "fiori undeploy --config ui5-deploy.yaml",
+        "deploy-test": "npm run build && fiori deploy --config ui5-deploy.yaml --testMode true"
+    },
+    "sapuxLayer": "CUSTOMER_BASE",
+    "ui5": {
+        "dependencies": [
+            "ui5-task-flatten-library"
+        ]
+    }
 }
