Some new adjustments

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@sap-ux/ui5-middleware-fe-mockserver": "^2.2.51",
         "@sap/ux-ui5-tooling": "^1.14.1",
-        "@ui5/cli": "^3.11.0",
+        "@ui5/cli": "^3.11.5",
         "rimraf": "^3.0.2",
         "ui5-task-flatten-library": "0.2.5"
     },
@@ -36,5 +36,8 @@
         "dependencies": [
             "ui5-task-flatten-library"
         ]
+    },
+    "dependencies": {
+        "pako": "^2.1.0"
     }
 }
